@@ -1,0 +1,6 @@
+class Aluguel < ActiveRecord::Base
+
+	belongs_to :apartamento
+	has_one :servico
+
+end
